--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.15.0",
